// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printing test reports > verbose traces are not shown if debug mode is disabled 1`] = `
"fail ┌ hello.w » root/env0/test:test
     │ sleeping for 500 ms
     │ Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"cool\\\\\\"]}\\").
     │ Subscriber error - returning 1 messages to queue: Missing environment variable: QUEUE_HANDLE_7164aec4
     │ Get (key=file.txt).
     │ Invoke (payload=\\"\\").
     └ Error: Object does not exist (key=file.txt)"
`;

exports[`printing test reports > verbose traces are shown if debug mode is enabled 1`] = `
"fail ┌ hello.w » root/env0/test:test
     │ Push (message=cool).
     │ sleeping for 500 ms
     │ Sending messages (messages=[\\"cool\\"], subscriber=sim-4).
     │ Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"cool\\\\\\"]}\\").
     │ Subscriber error - returning 1 messages to queue: Missing environment variable: QUEUE_HANDLE_7164aec4
     │ Get (key=file.txt).
     │ Invoke (payload=\\"\\").
     └ Error: Object does not exist (key=file.txt)"
`;
